Ya funciona todo. Faltan pruebas unitarias JUnit